--- a/syntaxe.html
+++ b/syntaxe.html
@@ -270,7 +270,7 @@
             #back0{
                   position: absolute;
                 top: 30vw;
-                left: 54vw;
+                left: 50vw;
                 z-index: -2;
             }
             #back0 img{
@@ -428,7 +428,8 @@
         <div id="keyword"># Data visualisation &emsp; # UI Design</div>
         <div id="text1">Structure <br>de la syntaxe</div>
 
-        <div id="text2">Projet de data visualisation sur les valeurs humaines.<br>Ce système graphique vise à identifier rapidement<br>la diversité des valeurs humaines et à faciliter<br>la compréhension de la diversité.<br>J'ai créé une façon de quantifier les valeurs humaines et représenté les données en graphique,  les données d'enquête de 42 pays ont été analysées.
+        <div id="text2">Interface d'automatisation qui représente la syntaxe française. La phrase saisi est automatiquement analysée par le serveur Core NLP et que le fichier JSON est téléchargé, il est appliqué au codage de mon système graphique que j’ai choisi différentes formes et couleurs pour représenter tous les types de mots et pour connecter la relation par des lignes.
+
         </div>
 
         <div id="text2-1">Février 2020 &emsp;&emsp;&emsp;Adobe Indesign&emsp;|&emsp;HTML CSS Java</div>
