--- a/main.html
+++ b/main.html
@@ -275,6 +275,13 @@
                 </div>
             </div>
 
+             <div>
+                <div class="content">
+                    <img src="source/echange006.jpg" onclick="window.location.href='echange.html'" style="width:100%">
+                    <p>Échange</p>
+                </div>
+            </div>
+            
             <div>
                 <div class="content">
                     <img src="source/mainatis.png" onclick="window.location.href='bota.html'" style="width:100%">
