--- a/syntaxe.html
+++ b/syntaxe.html
@@ -424,7 +424,7 @@
         <div id="prev" onclick="window.location.href='treslay.html'">❮</div>
         <div id="next" onclick="window.location.href='bota.html'">❯</div>
 
-        <div id="keyword"># Data visualisation &emsp; # UI Design</div>
+        <div id="keyword"># Data visualisation</div>
         <div id="text1">Structure <br>de la syntaxe</div>
 
         <div id="text2">Interface d'automatisation qui représente la syntaxe française. La phrase saisi est automatiquement analysée par le serveur Core NLP et que le fichier JSON est téléchargé, il est appliqué au codage de mon système graphique que j’ai choisi différentes formes et couleurs pour représenter tous les types de mots et pour connecter la relation par des lignes.
