--- a/treslay.html
+++ b/treslay.html
@@ -767,7 +767,7 @@
 
         <div id="up" onclick="scrollWin()">↑</div>
 
-        <div id="keyword"># Typographie &emsp;  # Graphisme &emsp; # UI Design</div>
+        <div id="keyword"># Typographie &emsp;  # Graphisme</div>
         <div id="text1">Treslay</div>
 
         <div id="text2">Treslay est une police de caractères superposables<br>et une conception polychromatique.
